--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -349,7 +349,7 @@
 
     // .title
     //     font-size: 16px
-        margin-top: 15px
+        // margin-top: 15px
         // line-height: 16px
 
 
